compiler/testData/diagnostics/tests/enum/interfaceWithEnumKeyword.fir.kt
enum interface Some {
    // Enum part
    <!UNRESOLVED_REFERENCE!>D;<!>

    // Interface like part
    fun test()
    val foo: Int
}